--- a/package.json
+++ b/package.json
@@ -5,10 +5,18 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^3.2.0",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "@vue/eslint-config-prettier": "^7.0.0",
+        "autoprefixer": "^10.4.13",
+        "prettier": "^2.8.0",
+        "sass": "^1.56.1",
+        "vue-router": "^4.1.6"
     }
 }
