--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@mdi/font": "^7.1.96",
         "@vue/eslint-config-prettier": "^7.0.0",
         "autoprefixer": "^10.4.13",
         "prettier": "^2.8.0",
         "sass": "^1.56.1",
-        "vue-router": "^4.1.6"
+        "vue-router": "^4.1.6",
+        "vuetify": "^3.0.5"
     }
 }
