--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "prettier": "^2.8.0",
         "sass": "^1.56.1",
         "vue-router": "^4.1.6",
+        "vue3-easy-data-table": "^1.5.22",
         "vuetify": "^3.0.5"
     }
 }
