--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
             XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
         volumes:
             - '.:/var/www/html'
+            - ./docker/nginx/default.conf:/etc/nginx/sites-available/default
+            - ./docker/nginx/.htpasswd:/etc/nginx/.htpasswd
         networks:
             - sail
         depends_on:
