--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
+    "type": "module",
     "private": true,
     "scripts": {
         "dev": "vite",
         "build": "vite build"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^3.2.0",
-        "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.0",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "vite": "^3.0.0"
+        "@vitejs/plugin-vue": "^5.2.3",
+        "axios": "^1.9.0",
+        "laravel-vite-plugin": "^1.2.0",
+        "lodash": "^4.17.21",
+        "postcss": "^8.5.3",
+        "vite": "^6.3.3"
     },
     "dependencies": {
-        "@mdi/font": "^7.1.96",
-        "@vue/eslint-config-prettier": "^7.0.0",
-        "autoprefixer": "^10.4.13",
-        "prettier": "^2.8.0",
-        "sass": "^1.56.1",
-        "vue-router": "^4.1.6",
-        "vue3-easy-data-table": "^1.5.22",
-        "vuetify": "^3.0.5"
+        "@mdi/font": "^7.4.47",
+        "@vue/eslint-config-prettier": "^10.2.0",
+        "autoprefixer": "^10.4.21",
+        "prettier": "^3.5.3",
+        "sass": "^1.87.0",
+        "vue-router": "^4.5.1",
+        "vue3-easy-data-table": "^1.5.47",
+        "vuetify": "^3.8.2"
     }
 }
