--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^5.2.3",
+        "@inertiajs/vue3": "^1.0.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@vitejs/plugin-vue": "^5.0.0",
+        "autoprefixer": "^10.4.12",
         "axios": "^1.9.0",
         "laravel-vite-plugin": "^1.2.0",
         "lodash": "^4.17.21",
-        "postcss": "^8.5.3",
-        "vite": "^6.3.3"
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.2.1",
+        "vite": "^6.3.3",
+        "vue": "^3.4.0"
     },
     "dependencies": {
         "@mdi/font": "^7.4.47",
